--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -28,8 +28,8 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-  "node": "20.x"
-},
+    "node": "20.x"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
