--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -13,11 +15,15 @@
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
+    "eslint": "^9.24.0",
+    "glob": "^11.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
