--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
-    "eslint": "^9.24.0",
     "glob": "^11.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -59,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
